src/test/ui/recursion/recursive-static-definition.stderr
error[E0391]: cycle detected when const-evaluating + checking `FOO`
  --> $DIR/recursive-static-definition.rs:1:1
   |
LL | pub static FOO: u32 = FOO;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: ...which immediately requires const-evaluating + checking `FOO` again
   = note: cycle used when running analysis passes on this crate

error: aborting due to previous error

For more information about this error, try `rustc --explain E0391`.
